2006-11-25  Yann Hodique  <Yann.Hodique@lifl.fr>

	* custom/patches.el (backup-directory-alist): disable tramp backups

	* lib/incr.el: initial checkin

2006-09-11  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/paredit.el: update to latest version

	* dotemacs.el: write windmove bindings in an obfuscated way ;)

	* custom/patches.el: fix strange behavior of mouse-insert-selection-internal

	* config/circe-config.el (yh/lui-truncate): customize truncation

2006-08-03  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/psvn.el: new version

	* lib/paredit.el: new version

	* custom/patches.el: looks like RET does not work anymore in custom buffers...

	* config/lisp-config.el (paredit): unbind the <modifier-left/right>
	(slime-repl-mode-hook): use paredit

	* config/circe-config.el (circe-command-RECOVER): add release...
	(circe-clear): truncate buffer to lower value

2006-08-01  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/lib-loaddefs.el: updated to reflect cleanup

	* dotgnus.el: using org-mode now

	* dotemacs.el (minimal): load circe

	* config/tabbar-config.el (yh/tabbar-buffer-groups): add case for IRC buffers

	* config/circe-config.el: various hacks

2006-07-28  Yann Hodique  <Yann.Hodique@lifl.fr>

	* config/circe-config.el: extended sorting tracking
	(lui-track-set-modified-status): faces are optional
	ported patches to newer circe

	* config/slime-config.el (slime): install slime48

2006-07-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* custom/patches.el (temporary-file-directory): bug fix

	* config/slime-config.el: initial checkin

2006-07-06  Yann Hodique  <Yann.Hodique@lifl.fr>

	* lib/icomplete+.el (read-from-minibuffer): fix arguments to comply with new signature

	* config/compile-config.el: don't make compile-history buffer-local after all

	* dotemacs.el: removing config for packages I don't use for now
	more doc

	* dotemacs-cust.el: remove semantic configuration

	* custom/autoloads.el: xtla does not exist anymore
